fixed dropdown z-index

--- a/frontend/src/app/shared/components/multiselect-dropdown/multiselect-dropdown.component.css
+++ b/frontend/src/app/shared/components/multiselect-dropdown/multiselect-dropdown.component.css
@@ -41,6 +41,7 @@
     width: 100%;
     background-color: white;
     position: absolute;
+    z-index: 100;
 }
 
 .dropdown-check-list ul.items li {
